@@ -18,6 +18,7 @@
 #define SRC_PROFILING_SYMBOLIZER_LOCAL_SYMBOLIZER_H_
 
 #include <map>
+#include <memory>
 #include <string>
 #include <vector>
 
@@ -32,13 +33,34 @@ bool ParseLlvmSymbolizerLine(const std::string& line,
                              std::string* file_name,
                              uint32_t* line_no);
 
-class LocalBinaryFinder {
+class BinaryFinder {
  public:
-  explicit LocalBinaryFinder(std::vector<std::string> roots)
-      : roots_(std::move(roots)) {}
+  virtual ~BinaryFinder();
+  virtual base::Optional<std::string> FindBinary(
+      const std::string& abspath,
+      const std::string& build_id) = 0;
+};
+
+class LocalBinaryIndexer : public BinaryFinder {
+ public:
+  explicit LocalBinaryIndexer(std::vector<std::string> roots);
 
   base::Optional<std::string> FindBinary(const std::string& abspath,
-                                         const std::string& build_id);
+                                         const std::string& build_id) override;
+  ~LocalBinaryIndexer() override;
+
+ private:
+  std::map<std::string, std::string> buildid_to_file_;
+};
+
+class LocalBinaryFinder : public BinaryFinder {
+ public:
+  explicit LocalBinaryFinder(std::vector<std::string> roots);
+
+  base::Optional<std::string> FindBinary(const std::string& abspath,
+                                         const std::string& build_id) override;
+
+  ~LocalBinaryFinder() override;
 
  private:
   bool IsCorrectFile(const std::string& symbol_file,
@@ -83,8 +105,8 @@ class LLVMSymbolizerProcess {
 
 class LocalSymbolizer : public Symbolizer {
  public:
-  explicit LocalSymbolizer(std::vector<std::string> roots)
-      : finder_(std::move(roots)) {}
+  explicit LocalSymbolizer(std::unique_ptr<BinaryFinder> finder)
+      : finder_(std::move(finder)) {}
 
   std::vector<std::vector<SymbolizedFrame>> Symbolize(
       const std::string& mapping_name,
@@ -95,8 +117,12 @@ class LocalSymbolizer : public Symbolizer {
 
  private:
   LLVMSymbolizerProcess llvm_symbolizer_;
-  LocalBinaryFinder finder_;
+  std::unique_ptr<BinaryFinder> finder_;
 };
+
+std::unique_ptr<Symbolizer> LocalSymbolizerOrDie(
+    std::vector<std::string> binary_path,
+    const char* mode);
 
 }  // namespace profiling
 }  // namespace perfetto
