@@ -22,9 +22,7 @@
 #include "perfetto/base/build_config.h"
 
 #include "src/profiling/symbolizer/symbolize_database.h"
-#if PERFETTO_BUILDFLAG(PERFETTO_LOCAL_SYMBOLIZER)
 #include "src/profiling/symbolizer/local_symbolizer.h"
-#endif
 #include "tools/trace_to_text/utils.h"
 
 #include "perfetto/base/logging.h"
@@ -54,17 +52,9 @@ int TraceToProfile(std::istream* input,
                    std::ostream* output,
                    uint64_t pid,
                    std::vector<uint64_t> timestamps) {
-  std::unique_ptr<profiling::Symbolizer> symbolizer;
-  auto binary_path = profiling::GetPerfettoBinaryPath();
-  if (!binary_path.empty()) {
-#if PERFETTO_BUILDFLAG(PERFETTO_LOCAL_SYMBOLIZER)
-    symbolizer.reset(new profiling::LocalSymbolizer(std::move(binary_path)));
-#else
-    PERFETTO_ELOG(
-        "This build does not support local symbolization. "
-        "Continuing without symbolization.");
-#endif
-  }
+  std::unique_ptr<profiling::Symbolizer> symbolizer =
+      profiling::LocalSymbolizerOrDie(profiling::GetPerfettoBinaryPath(),
+                                      getenv("PERFETTO_SYMBOLIZER_MODE"));
 
   std::vector<SerializedProfile> profiles;
   TraceToPprof(input, &profiles, symbolizer.get(), pid, timestamps);
